[metadata]
name = tiler
version = 0.0.1

[options]
packages = find:
install_requires =
    pyyaml
    pyproj
    pypng
    Pillow
    pycairo
    tps @ git+https://github.com/wladich/thinplatespline.git
    maprec @ git+https://github.com/wladich/maprec.git
    ozi_map @ git+https://github.com/wladich/ozi_map.git
    imagequant @ git+https://github.com/wladich/pyimagequant.git
    PyGObject

[options.extras_require]
test =
    black

[options.entry_points]
console_scripts =
  tiler = tiler.tiles_update:main
